Override the selection styling to allow one to see what the code is like

--- a/typograms.css
+++ b/typograms.css
@@ -28,6 +28,11 @@
   white-space: pre;
 }
 
+text::selection {
+    fill: black;
+    background-color: #EEE;
+}
+
 .reserved {
   fill: transparent;
   white-space: pre;
